--- a/app/src/main/res/layout/activity_location_city.xml
+++ b/app/src/main/res/layout/activity_location_city.xml
@@ -8,30 +8,18 @@
     android:orientation="vertical">
 
 
-    <EditText
-        android:id="@+id/txtCity"
+
+    <Spinner
+        android:id="@+id/spnCity"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_marginTop="30dp"
-        android:textSize="24sp"
+        android:layout_marginTop="100dp"
         android:textAlignment="center"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:hint="@string/cityHint"
-        android:autofillHints=""/>
-
-    <Button
-        android:id="@+id/btnSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btnSearch"
-        android:textSize="16sp"
-        android:textAlignment="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"/>
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_weight="1.5"
+        android:background="@drawable/spinner_border"
+        />
 
 
 
@@ -39,7 +27,7 @@
         android:id="@+id/imgIcon"
         android:layout_width="match_parent"
         android:layout_height="141dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         app:srcCompat="@android:drawable/ic_input_add"
         android:contentDescription="@string/imgWeather" />
 
@@ -130,7 +118,6 @@
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 
