--- a/app/src/main/res/layout/activity_add_new_locations.xml
+++ b/app/src/main/res/layout/activity_add_new_locations.xml
@@ -7,6 +7,15 @@
     tools:context=".AddNewLocations"
     android:orientation="vertical">
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/ic_back"
+        android:background="@color/white"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,6 +44,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"/>
+
+
 
 
 </LinearLayout>
