--- a/app/src/main/res/layout/activity_add_new_locations.xml
+++ b/app/src/main/res/layout/activity_add_new_locations.xml
@@ -43,7 +43,8 @@
         android:id="@+id/recyclerViewCities"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        tools:listitem="@layout/item_city"/>
 
 
 
