--- a/app/src/main/res/layout/fragment_view_location_by_city.xml
+++ b/app/src/main/res/layout/fragment_view_location_by_city.xml
@@ -16,12 +16,11 @@
         <Spinner
             android:id="@+id/spnCity"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
             android:textAlignment="center"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:layout_weight="1.5"
             android:background="@drawable/spinner_border"
             />
 
@@ -31,7 +30,7 @@
             android:id="@+id/imgIcon"
             android:layout_width="match_parent"
             android:layout_height="141dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             app:srcCompat="@android:drawable/ic_input_add"
             android:contentDescription="@string/imgWeather" />
 
@@ -85,12 +84,14 @@
                 android:textSize="20sp"/>
 
         </LinearLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="207dp"
             android:layout_marginTop="20dp"
 
             >
+
 
             <Button
                 android:id="@+id/btnAddCity"
@@ -120,6 +121,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@android:drawable/ic_input_add"
                 tools:ignore="MissingConstraints" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/weatherForcast"
+                android:layout_width="230dp"
+                android:layout_height="210dp"
+                android:layout_marginBottom="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btnAddCity"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
