--- a/app/src/main/res/layout/fragment_my_location.xml
+++ b/app/src/main/res/layout/fragment_my_location.xml
@@ -79,6 +79,19 @@
             android:layout_marginLeft="20dp"
             android:textSize="20sp"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvWeather"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:layout_marginBottom="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"/>
+
     </LinearLayout>
+
+
 
 </RelativeLayout>
