--- a/app/src/main/res/layout/activity_add_new_locations.xml
+++ b/app/src/main/res/layout/activity_add_new_locations.xml
@@ -11,10 +11,11 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/ic_back"
-        android:background="@color/white"/>
+        android:background="@color/white"
+        android:contentDescription="@string/todo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +28,9 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:hint="@string/enter_a_city"/>
+            android:inputType="text"
+            android:hint="@string/enter_a_city"
+            android:autofillHints="Ragama" />
 
         <Button
             android:id="@+id/btnAdd"
@@ -44,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        tools:listitem="@layout/item_city"/>
+        tools:listitem="@layout/item_city" />
 
 
 
